--- a/Portafolio.html
+++ b/Portafolio.html
@@ -11,7 +11,7 @@
     <form>
         <h1>Piero Sepulveda</h1>
         <div>
-        <img src="perfi.jpg" width="145" height="130" alt="perfil">
+        <img id="yo"src="yo.jpg" width="145" height="250" alt="perfil">
         </div>
         <div>
         <img src="github.png" width="50" height="50" alt="git">
